# specsmith-test

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LEDGER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: persistent.yml  staging.yml
.specsmith/: agent-tools.json  credit-budget.json  ledger-chain.txt  migration-state.json  requirements.json  testcases.json
.specsmith/compliance/: README.md  eu-ai-act.yaml
.specsmith/governance/: context-budget.yaml  drift-metrics.yaml  lifecycle.yaml  roles.yaml  rules.yaml  session-protocol.yaml  verification.yaml
docs/: ARCHITECTURE.md  REQUIREMENTS.md  SPECSMITH.yml  TESTS.md
docs/governance/: CONTEXT-BUDGET.md  DRIFT-METRICS.md  LIFECYCLE.md  ROLES.md  RULES.md  SESSION-PROTOCOL.md  VERIFICATION.md
docs/requirements/: gateway.yml
docs/tests/: gateway.yml
firmware/rust/: Cargo.toml
firmware/rust/src/: lib.rs
scripts/: exec.cmd  exec.sh  run.cmd  run.sh  setup.cmd  setup.sh
src/ismart_core/: __init__.py  gateway.py
src/ismart_core/can/: frame.py
src/ismart_core/sensor/: adc.py
tests/: test_adc_advanced.py  test_can_advanced.py  test_gateway.py  test_governance.py  test_integration.py
