[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ismart-core"
version = "0.1.0"
description = "iSMART gateway simulator — specsmith integration test project"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ismart_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]
